--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,29 @@
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .form {
   display: flex;
   flex-direction: column;
+}
+
+.clubcard {
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px gray solid;
+  list-style: none;
+  margin-top: 10px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  background-color: green;
+  color: antiquewhite;
+  padding: 5px;
+}
+.name {
+  font-size: 20px;
+  font-weight: 800;
+  text-decoration: underline;
 }
