--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,18 +1,30 @@
+.container {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px rgb(204, 194, 194) solid;
+  width: 95%;
 }
 
 .title {
   font-weight: 900;
   font-size: 30px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
+  margin-left: 40px;
 }
 
 .form {
   display: flex;
   flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  border-top: 1px solid gray;
+  margin: 20px auto;
 }
 
 .clubcard {
@@ -28,6 +40,7 @@
   background-color: green;
   color: antiquewhite;
   padding: 5px;
+  box-shadow: 0px 2px 5px gray;
 }
 .name {
   font-size: 20px;
